force-app/zurich-base/main/default/objects/Asset/Asset.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>