force-app/zurich-base/main/default/objects/Asset/fields/ActivityDescription__c.field-meta.xml
<CustomField>
    <fullName>ActivityDescription__c</fullName>
    <label>Activity Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>