force-app/zurich-base/main/default/objects/Asset/fields/AddressAdditionalInfo__c.field-meta.xml
<CustomField>
    <fullName>AddressAdditionalInfo__c</fullName>
    <description>OCS</description>
    <label>Address Additional Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>