force-app/zurich-base/main/default/objects/Asset/fields/AddressName__c.field-meta.xml
<CustomField>
    <fullName>AddressName__c</fullName>
    <description>OCS</description>
    <label>Address Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>