force-app/zurich-base/main/default/objects/Asset/fields/AddressNumber__c.field-meta.xml
<CustomField>
    <fullName>AddressNumber__c</fullName>
    <description>OCS</description>
    <label>Address Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>