force-app/zurich-base/main/default/objects/Asset/fields/AddressType__c.field-meta.xml
<CustomField>
    <fullName>AddressType__c</fullName>
    <description>OCS</description>
    <label>Address Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>