force-app/zurich-base/main/default/objects/Asset/fields/Anonymized__c.field-meta.xml
<CustomField>
    <fullName>Anonymized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(OCS/ZE). Destinado a gestionar la visibilidad del cliente debido a la GDPR. Último nivel de restricción de acceso. Anonimización de los datos sensibles o de identificación.</description>
    <label>Anonymized</label>
    <type>Checkbox</type>
</CustomField>