force-app/zurich-base/main/default/objects/Asset/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <description>OCS</description>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>