force-app/zurich-base/main/default/objects/Asset/fields/BoatName__c.field-meta.xml
<CustomField>
    <fullName>BoatName__c</fullName>
    <description>OCS</description>
    <label>Boat Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>