force-app/zurich-base/main/default/objects/Asset/fields/BoatRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>BoatRegistrationNumber__c</fullName>
    <description>(OCS): Contiene el número de matrícula del embarcación asegurado</description>
    <label>Boat Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>