force-app/zurich-base/main/default/objects/Asset/fields/BrandName__c.field-meta.xml
<CustomField>
    <fullName>BrandName__c</fullName>
    <description>(OCS): Contiene la marca del vehículo/dispositivo asegurado</description>
    <label>Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>