force-app/zurich-base/main/default/objects/Asset/fields/Building_Type__c.field-meta.xml
<CustomField>
    <fullName>Building_Type__c</fullName>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>VI</fullName>
            </value>
            <value>
                <fullName>MP</fullName>
            </value>
            <value>
                <fullName>OF</fullName>
            </value>
            <value>
                <fullName>VO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>