force-app/zurich-base/main/default/objects/Asset/fields/BulletproofDoor__c.field-meta.xml
<CustomField>
    <fullName>BulletproofDoor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bulletproof Door</label>
    <type>Checkbox</type>
</CustomField>