force-app/zurich-base/main/default/objects/Asset/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>OCS</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>