force-app/zurich-base/main/default/objects/Asset/fields/ConnectedAlarm__c.field-meta.xml
<CustomField>
    <fullName>ConnectedAlarm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connected Alarm</label>
    <type>Checkbox</type>
</CustomField>