force-app/zurich-base/main/default/objects/Asset/fields/DeviceBrandName__c.field-meta.xml
<CustomField>
    <fullName>DeviceBrandName__c</fullName>
    <description>(OCS): Contiene la marca del dispositivo asegurado</description>
    <label>Device Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>