force-app/zurich-base/main/default/objects/Asset/fields/DeviceModel__c.field-meta.xml
<CustomField>
    <fullName>DeviceModel__c</fullName>
    <description>(OCS): Contiene el modelo del dispositivo asegurado</description>
    <label>DeviceModel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>