force-app/zurich-base/main/default/objects/Asset/fields/FireExtinguisher__c.field-meta.xml
<CustomField>
    <fullName>FireExtinguisher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fire Extinguisher</label>
    <type>Checkbox</type>
</CustomField>