force-app/zurich-base/main/default/objects/Asset/fields/FireHydrant__c.field-meta.xml
<CustomField>
    <fullName>FireHydrant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fire Hydrant</label>
    <type>Checkbox</type>
</CustomField>