force-app/zurich-base/main/default/objects/Asset/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>OCS</description>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>