force-app/zurich-base/main/default/objects/Asset/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <label>Height</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AL</fullName>
            </value>
            <value>
                <fullName>PB</fullName>
            </value>
            <value>
                <fullName>SO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>