force-app/zurich-base/main/default/objects/Asset/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <formula>CASE(RecordType.DeveloperName, 
&quot;Boat&quot;,BoatName__c &amp; &quot; - &quot; &amp; RegistrationNumber__c, 
&quot;Address&quot;,AddressType__c &amp; &quot; &quot; &amp; AddressName__c &amp; &quot; &quot; &amp; AddressNumber__c &amp; &quot; &quot; &amp; AddressAdditionalInfo__c,
&quot;ElectronicDevice&quot;,ActivityDescription__c,
&quot;Mobile&quot;,BrandName__c &amp; &quot; &quot; &amp; Model__c,
&quot;Motor&quot;,RegistrationNumber__c &amp; &quot; - &quot; &amp; BrandName__c &amp; &quot; &quot; &amp; Model__c,
&quot;Person&quot;,FirstName__c &amp; &quot; &quot; &amp; LastName1__c &amp; &quot; &quot; &amp; LastName2__c &amp; &quot; - &quot; &amp; TEXT(Birthdate__c),
 INFOInsuredObjectCode__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identifier</label>
    <type>Text</type>
</CustomField>