force-app/zurich-base/main/default/objects/Asset/fields/INFOInsuredObjectCode__c.field-meta.xml
<CustomField>
    <fullName>INFOInsuredObjectCode__c</fullName>
    <description>(OCS): Concatenación de los campos de Número de póliza y Secuencial</description>
    <externalId>true</externalId>
    <label>INFO Insured Object Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>