force-app/zurich-base/main/default/objects/Asset/fields/InsuredType__c.field-meta.xml
<CustomField>
    <fullName>InsuredType__c</fullName>
    <label>Insured Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>O</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>