force-app/zurich-base/main/default/objects/Asset/fields/IsParentBlocked__c.field-meta.xml
<CustomField>
    <fullName>IsParentBlocked__c</fullName>
    <formula>OR(Account.Blocked__c,OfferId__r.Blocked__c , PolicyId__r.Blocked__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsParentBlocked</label>
    <type>Checkbox</type>
</CustomField>