force-app/zurich-base/main/default/objects/Asset/fields/LastName1__c.field-meta.xml
<CustomField>
    <fullName>LastName1__c</fullName>
    <description>OCS</description>
    <label>Last Name 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>