force-app/zurich-base/main/default/objects/Asset/fields/LastName2__c.field-meta.xml
<CustomField>
    <fullName>LastName2__c</fullName>
    <description>OCS</description>
    <label>Last Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>