force-app/zurich-base/main/default/objects/Asset/fields/LockType__c.field-meta.xml
<CustomField>
    <fullName>LockType__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock Type</label>
    <type>Checkbox</type>
</CustomField>