force-app/zurich-base/main/default/objects/Asset/fields/ObjectSequential__c.field-meta.xml
<CustomField>
    <fullName>ObjectSequential__c</fullName>
    <description>(OCS): Número secuencial que representa el identificador de un objeto asegurado dentro de la póliza</description>
    <label>Object sequential</label>
    <length>5</length>
    <type>Text</type>
</CustomField>