force-app/zurich-base/main/default/objects/Asset/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <description>(OCS): Tipo de objeto. En función de este campo se definirá el Tipo de registro correspondiente</description>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0000000057</fullName>
                <label>EMBARCACION</label>
            </value>
            <value>
                <fullName>0000000044</fullName>
                <label>PERSONA ACCIDENTES</label>
            </value>
            <value>
                <fullName>0000000008</fullName>
                <label>EMPRESA</label>
            </value>
            <value>
                <fullName>0000000062</fullName>
                <label>COMERCIOS_SERVICIOS</label>
            </value>
            <value>
                <fullName>0000000018</fullName>
                <label>VIVIENDA</label>
            </value>
            <value>
                <fullName>0000000003</fullName>
                <label>VEHICULO</label>
            </value>
            <value>
                <fullName>0000000050</fullName>
                <label>BIEN ASEG</label>
            </value>
            <value>
                <fullName>0000000041</fullName>
                <label>EQUIPO ELECTRÓNICO</label>
            </value>
            <value>
                <fullName>Address</fullName>
                <isActive>false</isActive>
                <label>Address</label>
            </value>
            <value>
                <fullName>Boat</fullName>
                <isActive>false</isActive>
                <label>Boat</label>
            </value>
            <value>
                <fullName>Electronic Device</fullName>
                <isActive>false</isActive>
                <label>Electronic Device</label>
            </value>
            <value>
                <fullName>Mobile</fullName>
                <isActive>false</isActive>
                <label>Mobile</label>
            </value>
            <value>
                <fullName>Motor</fullName>
                <isActive>false</isActive>
                <label>Motor</label>
            </value>
            <value>
                <fullName>Person</fullName>
                <isActive>false</isActive>
                <label>Person</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>