force-app/zurich-base/main/default/objects/Asset/fields/OfferId__c.field-meta.xml
<CustomField>
    <fullName>OfferId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(OCS). Puntero a la oferta relacionada</description>
    <label>Offer Number</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Insured Objects</relationshipLabel>
    <relationshipName>Insured_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>