force-app/zurich-base/main/default/objects/Asset/fields/OfferPolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>OfferPolicyNumber__c</fullName>
    <description>Muestra el número de Offer Number si este está relleno y si no, el número de Policy Number. El campo deberá ser un vínculo al registro correspondiente</description>
    <formula>HYPERLINK(
    &quot;/&quot; &amp; BLANKVALUE( OfferId__c , PolicyId__c ), 
    BLANKVALUE( OfferId__r.Name , PolicyId__r.Name )
)</formula>
    <label>Offer/Policy Number</label>
    <type>Text</type>
</CustomField>