force-app/zurich-base/main/default/objects/Asset/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <label>Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>