force-app/zurich-base/main/default/objects/Asset/fields/PolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>PolicyNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(OCS): Relación con la póliza</description>
    <label>Policy Number</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>PolicyNumbers</relationshipName>
    <type>Lookup</type>
</CustomField>