force-app/zurich-base/main/default/objects/Asset/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>Postal Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>