force-app/zurich-base/main/default/objects/Asset/fields/RegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>RegistrationNumber__c</fullName>
    <description>(OCS): Contiene el número de matrícula del vehículo/embarcación asegurado</description>
    <label>Registration number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>