force-app/zurich-base/main/default/objects/Asset/fields/RiskFactor02__c.field-meta.xml
<CustomField>
    <fullName>RiskFactor02__c</fullName>
    <label>Risk Factor 02</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RiskFactor</valueSetName>
    </valueSet>
</CustomField>