force-app/zurich-base/main/default/objects/Asset/fields/Safe__c.field-meta.xml
<CustomField>
    <fullName>Safe__c</fullName>
    <label>Safe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>