force-app/zurich-base/main/default/objects/Asset/fields/SecurityDoor__c.field-meta.xml
<CustomField>
    <fullName>SecurityDoor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Security Door</label>
    <type>Checkbox</type>
</CustomField>