force-app/zurich-base/main/default/objects/Asset/fields/SmokeDetector__c.field-meta.xml
<CustomField>
    <fullName>SmokeDetector__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smoke Detector</label>
    <type>Checkbox</type>
</CustomField>