force-app/zurich-base/main/default/objects/Asset/fields/Sprayer__c.field-meta.xml
<CustomField>
    <fullName>Sprayer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sprayer</label>
    <type>Checkbox</type>
</CustomField>