force-app/zurich-base/main/default/objects/Asset/fields/TypeOfWindows__c.field-meta.xml
<CustomField>
    <fullName>TypeOfWindows__c</fullName>
    <label>Type of Windows</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>