force-app/zurich-base/main/default/objects/Asset/fields/X24h_Security__c.field-meta.xml
<CustomField>
    <fullName>X24h_Security__c</fullName>
    <defaultValue>false</defaultValue>
    <label>24h Security</label>
    <type>Checkbox</type>
</CustomField>