force-app/zurich-base/main/default/objects/Asset/fields/YearOfconstruction__c.field-meta.xml
<CustomField>
    <fullName>YearOfconstruction__c</fullName>
    <label>Year of construction</label>
    <length>4</length>
    <type>Text</type>
</CustomField>