force-app/zurich-base/main/default/objects/Asset/recordTypes/Address.recordType-meta.xml
<RecordType>
    <fullName>Address</fullName>
    <active>true</active>
    <description>Zurich OCS Address Record Type</description>
    <label>Address</label>
</RecordType>