force-app/zurich-base/main/default/objects/Asset/recordTypes/Boat.recordType-meta.xml
<RecordType>
    <fullName>Boat</fullName>
    <active>true</active>
    <description>Zurich OCS Boat Record Type</description>
    <label>Boat</label>
</RecordType>