force-app/zurich-base/main/default/objects/Asset/recordTypes/ElectronicDevice.recordType-meta.xml
<RecordType>
    <fullName>ElectronicDevice</fullName>
    <active>true</active>
    <description>Zurich OCS Electronic Device Record Type</description>
    <label>Electronic Device</label>
</RecordType>