force-app/zurich-base/main/default/objects/Asset/recordTypes/Mobile.recordType-meta.xml
<RecordType>
    <fullName>Mobile</fullName>
    <active>true</active>
    <description>Zurich OCS Mobile Record Type</description>
    <label>Mobile</label>
</RecordType>