force-app/zurich-base/main/default/objects/Asset/recordTypes/Motor.recordType-meta.xml
<RecordType>
    <fullName>Motor</fullName>
    <active>true</active>
    <description>Zurich OCS Motor Record Type</description>
    <label>Motor</label>
</RecordType>