force-app/zurich-base/main/default/objects/Asset/recordTypes/Person.recordType-meta.xml
<RecordType>
    <fullName>Person</fullName>
    <active>true</active>
    <description>Zurich OCS Person Record Type</description>
    <label>Person</label>
</RecordType>